# playground-CLIP

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLIP_모델_테스트_배드.ipynb  README.md  compose.yaml  main.py  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: category.py  image_search.py  product.py
app/common/: __init__.py  exceptions.py  responses.py  utils.py
app/core/: config.py  database.py  logger.py  security.py
app/domain/category/: repository.py  schemas.py  service.py
app/domain/image_search/: __init__.py  repository.py  schemas.py  service.py  usecase.py  vectorizer.py
app/domain/product/: __init__.py  models.py  repository.py  schemas.py  service.py  usecase.py
app/infra/clip/: __init__.py  adapter.py
app/infra/db/: session.py
app/infra/external_api/: __init__.py  firstmall.py
app/infra/opensearch/: __init__.py  client.py  repository.py
app/jobs/: index_products.py
docs/: api.md  architecture.md  concepts.md  image-search-flow.md  indexing-pipeline.md  local-development.md
migrations/: README.md  env.py
scripts/: index_products.sh  run_api.sh  test.sh
tests/: conftest.py
tests/unit/: test_api.py
