[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "playground-clip"
version = "0.1.0"
description = "Image-based product search API using FastAPI, CLIP, and OpenSearch."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "numpy>=2.0.0",
  "opensearch-py>=2.6.0",
  "pillow>=10.4.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
ml = [
  "open-clip-torch>=2.26.0",
  "torch>=2.4.0",
]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
packages = ["app"]
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
